# pypi-pycefr

./: CITATION.MD  LICENSE  README.md  data.csv  data.json  pyproject.toml  setup.py  testScripts.py
.github/workflows/: python-publish.yml
DATA_JSON/: repo_data.json  summary_data.json  total_data.json
src/pycefr/: ClassIterTree.py  __init__.py  data.csv  data.json  dict.py  getcsv.py  getjson.py  levels.py  pycerfl.py
src/pycefr/data/: dicc.txt
