[build-system]
requires = ["flit_core >=3.2,<4", 'requests','pandas']
build-backend = "flit_core.buildapi"

[project]
name = "pycefr"
authors = [{name = "Raula G. Kula", email = "raula-k@is.naist.jp"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://raux.github.io/"
