[build-system]
requires = ["flit_core", 'pandas']
build-backend = "flit_core.buildapi"

[project]
name = "pycefr"
authors = [{name = "Raula G. Kula", email = "raula-k@is.naist.jp"}]
version='1.0.1'
url='https://github.com/NAIST-SE/pypi-pycefr'
description='A tool to measure code competency levels based on CEFR model'
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Topic :: Software Development :: Build Tools',
]

[project.urls]
Home = "https://raux.github.io/"
